cambios en pages

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -212,6 +212,21 @@
   <h4 >Efectivo, Mercadopago, tarjetas de crédito y débito.</h4>
   
   </div>
+  <div  class="iconosReordenamiento">
+    <a>
+  
+    <img src="./img/whatsappicono.png" alt="icono Whatsapp oscuro ">
+  </a>
+  
+  <a href="https://www.instagram.com/lcharcutier/?hl=es">
+    <img   src="./img/iconoinstagram.png" alt="icono nuevo instagram oscuro con enlace de la pagina oficial de Le Charcutier :Lcharcutier">
+  </a>
+  
+  <a href="https://www.facebook.com/picadaslecharcutier/">
+  <img src="./img/facebookicono.png" alt="icono nuevo facebook enlace Picadas Le Charcutier">
+  </a>
+  </div>
+  
   </footer>
   
   <div class="container-fluid">
