--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -166,15 +166,15 @@
 <div  class="iconosReordenamiento">
   <a>
 
-  <img src="./img/whatsappicono.png" alt="icono Whatsapp oscuro ">
+  <img src="../img/whatsappicono.png" alt="icono Whatsapp oscuro ">
 </a>
 
 <a href="https://www.instagram.com/lcharcutier/?hl=es">
-  <img   src="./img/iconoinstagram.png" alt="icono nuevo instagram oscuro con enlace de la pagina oficial de Le Charcutier :Lcharcutier">
+  <img   src="../img/iconoinstagram.png" alt="icono nuevo instagram oscuro con enlace de la pagina oficial de Le Charcutier :Lcharcutier">
 </a>
 
 <a href="https://www.facebook.com/picadaslecharcutier/">
-<img src="./img/facebookicono.png" alt="icono nuevo facebook enlace Picadas Le Charcutier">
+<img src="../img/facebookicono.png" alt="icono nuevo facebook enlace Picadas Le Charcutier">
 </a>
 </div>
 
