--- a/pages/compras.html
+++ b/pages/compras.html
@@ -23,6 +23,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 <link rel="stylesheet" href="./css/style.css">
+
     <title>Le Charcutier</title>
 </head>
 <body>
@@ -30,7 +31,7 @@
         <div class="row">
              <div class="col-lg-12  text-center enviosGratis">
             <a href="./pages/productos.html">
-                    <h3 class="enviosGratisText">Envío GRATIS en CABA en pedidos mayores a $15.000</h3>
+                    <h3 class="enviosGratisText animate__animated animate__backInLeft animate__delay-0.8s">Envío GRATIS en CABA en pedidos mayores a $15.000</h3>
                 </a>
             </div> 
         </div>
