--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -77,6 +77,42 @@
 
      
   </nav>
+  <nav class="container-fluid navResponsive text-center " >
+    <div class="row border-bottom ">
+      <div class="col  ">
+
+        <div class="p-2">
+          <a  href="./pages/productos.html">Productos</a> 
+        </div>
+      </div>
+
+      <div class="col ">
+
+        <div class="p-2 ">
+          <a  href="./pages/blackbox.html">Black box</a>
+        </div>
+
+      </div>
+    </div>
+      <div class="row">
+
+        <div class="col ">
+          <div class="p-2 ">
+            <a  href="./pages/nosotros.html">Nosotros</a>
+          </div>
+        </div>
+
+        <div class="col ">
+          <div class="p-2  ">
+            <a  href="./pages/contacto.html">Contacto</a>
+          </div>
+        </div>
+
+      </div>
+
+   
+  </nav>
+ 
 
   
 </header>
@@ -119,7 +155,7 @@
 </main>
 
 <footer >
-  <div class="gridFooter">
+  <div class="gridFooter  border-top">
   <div > 
     <span><img src="../img/facturaaimg.png" alt="Factura A compras seguras comprobante negocio B2B"></span> <h2>Factura A:</h2>
     <h4>Solicitala antes de terminar tu pedido.</h4>
