--- a/pages/productos.html
+++ b/pages/productos.html
@@ -61,7 +61,7 @@
           </div>
 
           <div class="p-2 ">
-            <a  href="./blackbox.html"><img class="BlackBoxEspacio" src="../img/icons8-regalo-50.png" alt="Picadas regalos saladados reuniones y amigos"/>Black box</a>
+            <a  href="./blackbox.html"><img class="me-2" src="../img/icons8-regalo-50.png" alt="Picadas regalos saladados reuniones y amigos"/>Black box</a>
           </div>
 
           <div class="p-2 "><a  href="./nosotros.html"> <img  src="../img/iconoinfo.png" alt="Picadas regalos saladados reuniones y amigos"/>Nosotros</a>
@@ -78,6 +78,42 @@
 
      
   </nav>
+  <nav class="container-fluid navResponsive text-center " >
+    <div class="row border-bottom ">
+      <div class="col  ">
+
+        <div class="p-2">
+          <a  href="./pages/productos.html">Productos</a> 
+        </div>
+      </div>
+
+      <div class="col ">
+
+        <div class="p-2 ">
+          <a  href="./pages/blackbox.html">Black box</a>
+        </div>
+
+      </div>
+    </div>
+      <div class="row">
+
+        <div class="col ">
+          <div class="p-2 ">
+            <a  href="./pages/nosotros.html">Nosotros</a>
+          </div>
+        </div>
+
+        <div class="col ">
+          <div class="p-2  ">
+            <a  href="./pages/contacto.html">Contacto</a>
+          </div>
+        </div>
+
+      </div>
+
+   
+  </nav>
+ 
 
   
 </header>
@@ -183,7 +219,7 @@
     </section>
   </main>
   <footer >
-    <div class="gridFooter">
+    <div class="gridFooter  border-top">
     <div > 
       <span><img src="../img/facturaaimg.png" alt="Factura A compras seguras comprobante negocio B2B"></span> <h2>Factura A:</h2>
       <h4>Solicitala antes de terminar tu pedido.</h4>
