--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -123,7 +123,7 @@
       <div class="row">
        
 
-        <div class="col-lg-6 col offset-3-lg ">
+        <div class="col-lg-6 col offset-lg-3 ">
           <h2 class="text-center">¿Estás Organizando un Evento Corporativo?</h2>
           <p class="text-center">Dejanos tus Email y el detalle de tu evento
             y nos contactaremos a la brevedad.</p>
