--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/iconfav.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://kit.fontawesome.com/0460232f03.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -129,19 +129,19 @@
  
   <main>  
            <section>
-            <div class="mainEditIndex ">
+            <div class="sectionImgPrincipal ">
              <h1 class="display 1">MÁS DE 15 AÑOS EN CADA MOMENTO</h1>
             </div>
           </section>
 
 <article>
  <div class="container mt-5">
-         <div class="row">
+         <div class="row ">
           <div class="col">
            <hr>
           </div>
               <div class="col text-center">
-                <p class="h1 h4-xs fontFamilyNuestrasPromosIndex">Nuestras Promociones<p>
+                <p class="h1 fontFamilyNuestrasPromosIndex ">Nuestras Promociones<p>
                </div>
                <div class="col">
                  <hr>
