--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/iconfav.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://kit.fontawesome.com/0460232f03.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -149,9 +149,9 @@
           <div class="col d-flex justify-content-center   ">
             <div class="card m-3 borderCards  hvr-grow-shadow" style="width: 18rem;">
               <img src="../img/imgpicadas/picadauno.png" class="card-img-top  " alt="...">
-              <div class="card-body bodyCards  ">
+              <div class="card-body   ">
                 <h5 class="card-title fw-bold bodyCards-box-shadow">PARÍS</h5>
-                <p class="card-text  bodyCards-box-shadow">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text  bodyCards-box-shadow"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -162,7 +162,7 @@
               <img src="../img/imgpicadas/picadados.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">LYON </h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -172,7 +172,7 @@
               <img src="../img/imgpicadas/picadatres.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">ORLEANS</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -184,7 +184,7 @@
               <img src="../img/imgpicadas/picadacuatro.png" class="card-img-top " alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">MOULINS</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -194,7 +194,7 @@
               <img src="../img/imgpicadas/picadacinco.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">ESTRASBURGO</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -204,7 +204,7 @@
               <img src="../img/imgpicadas/picadaseis.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">VERSALLES  </h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
