--- a/pages/blackbox.html
+++ b/pages/blackbox.html
@@ -148,8 +148,8 @@
         <div class="card m-3 borderCards  hvr-grow-shadow" style="width: 18rem;">
           <img src="../img/imagenesblackbox/blackboxclasica.jpg" class="card-img-top  " alt="...">
           <div class="card-body bodyCards  ">
-            <h5 class="card-title fw-bold bodyCards-box-shadow">PARÍS</h5>
-            <p class="card-text  bodyCards-box-shadow">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title fw-bold bodyCards-box-shadow">CLASICA</h5>
+            <p class="card-text  bodyCards-box-shadow"> <u class="me-2">Ingredientes:</u>Bondiola 100g/ Salame Tandilero de Puro Cerdo 75g/ longaniza/ Queso Cabral 150g/ Fontina 150g/ Gouda 150g/ Olivas verdes y Negras 100g / Pan de Masa Madre 300 g</p>
             <a href="./contacto.html" class="botonComprarProductoBlackBox">CONTACTAR</a>
           </div>
         </div>
@@ -159,8 +159,10 @@
         <div class="card m-3 borderCards hvr-grow-shadow" style="width: 18rem;">
           <img src="../img/imagenesblackbox/blackboxdorada.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title fw-bold">LYON </h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title fw-bold">PREMIUM I </h5>
+            <p class="card-text"> <u class="me-2">Ingredientes:</u> Prosciutto Italiano 100g / Milán tipo Italiano 75g / Spianata 75g/ Queso Fontina picante 200g/ Queso Raclette suave 150g/ Higos en Almibar/ Oliva 250cc/ Almendras 100g/  
+
+              Opcion con vino : Vino “El Esteco”</p>
             <a href="./contacto.html" class="botonComprarProductoBlackBox">CONTACTAR</a>
           </div>
         </div>
@@ -169,8 +171,14 @@
         <div class="card m-3 borderCards hvr-grow-shadow" style="width: 18rem;">
           <img src="../img/imagenesblackbox/blackboxfondiufull.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title fw-bold">ORLEANS</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title fw-bold">FONDEU</h5>
+            <p class="card-text"> <u class="me-2">Ingredientes:</u>
+              300 grs GRUYERE/
+              300 grs FONTINA/  
+              300 grs COLONIA/   
+              1 vino Alma Mora Chardonnay 375 cc
+              
+              2 Baguetines Integrales con semillas de Masa Madre</p>
             <a href="./contacto.html" class="botonComprarProductoBlackBox">CONTACTAR</a>
           </div>
         </div>
@@ -181,8 +189,8 @@
         <div class="card m-3 borderCards hvr-grow-shadow" style="width: 18rem;">
           <img src="../img/imagenesblackbox/blackboxnuevapremium.jpg" class="card-img-top " alt="...">
           <div class="card-body">
-            <h5 class="card-title fw-bold">MOULINS</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title fw-bold">PREMIUM II</h5>
+            <p class="card-text"> <u class="me-2">Ingredientes:</u>Jamón crudo Español 100g/ Salame Mercedino Puro cerdo 160g/ Chistorra con Pimentón 160g/ Queso Pecorino de oveja 230g/ Queso Banquete de Tandil 200g/ Papaya en Almíbar/ Salmón Rosado en Escabeche/ Pimentón Ahumado/ Nueces Mariposas 100g/ Vino “El Esteco”.</p>
             <a href="./contacto.html" class="botonComprarProductoBlackBox">CONTACTAR</a>
           </div>
         </div>
@@ -191,8 +199,10 @@
         <div class="card m-3 borderCards hvr-grow-shadow" style="width: 18rem;">
           <img src="../img/imagenesblackbox/blackboxpremium.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title fw-bold">ESTRASBURGO</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title fw-bold">GOLD</h5>
+            <p class="card-text"> <u class="me-2">Ingredientes:</u>Jamón Crudo Español 100g/ Salame tipo Italiano 75g/ Longaniza 75g/ 1 Quesito Le Charcutier con ajo / Raclette 150g/ Brie 150g/ 1 Burratina / Tomates Secos marinados 100g/ Pan de Masa Madre 300g/ 
+
+              Opción con Vino: Petite Fleur</p>
             <a href="./contacto.html" class="botonComprarProductoBlackBox">CONTACTAR</a>
           </div>
         </div>
@@ -201,8 +211,8 @@
         <div class="card m-3 borderCards hvr-grow-shadow" style="width: 18rem;">
           <img src="../img/imagenesblackbox/blackboxsurtido.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title fw-bold">VERSALLES  </h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title fw-bold">ESCABECHE  </h5>
+            <p class="card-text"> <u class="me-2">Ingredientes:</u>Prosciutto Italiano 100g/ Paté de Salmón/ Vizcacha en Escabeche/ Corazón de Alcaucil/ Aceitunas con Almendras/ Salsa Brava/ Mostaza a la Miel/ Frambuesas al natural/ Mermelada de Arándanos. </p>
             <a href="./contacto.html" class="botonComprarProductoBlackBox">CONTACTAR</a>
           </div>
         </div>
