--- a/pages/productos.html
+++ b/pages/productos.html
@@ -151,7 +151,7 @@
               <img src="../img/imgpicadas/picadauno.png" class="card-img-top  " alt="...">
               <div class="card-body   ">
                 <h5 class="card-title fw-bold bodyCards-box-shadow">PARÍS</h5>
-                <p class="card-text  bodyCards-box-shadow"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text  bodyCards-box-shadow"> <u class="me-2">Ingredientes:</u>Prosciutto Italiano 100g/ Paté de Salmón/ Vizcacha en Escabeche/ Corazón de Alcaucil/ Aceitunas con Almendras/ Salsa Brava/ Mostaza a la Miel/ Frambuesas al natural/ Mermelada de Arándanos. </p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -162,7 +162,7 @@
               <img src="../img/imgpicadas/picadados.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">LYON </h5>
-                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Quesito con Ajo y Perejil / Tomates Secos en Oliva / Berenjenas Grilladas / Ajíes con Roquefort / Olivas Negras Maceradas / Zanahorias Glaseadas / Ciruelas Rellenas con Pasas y Nueces / Champignones a la Italiana / Trufas de Gruyere y Pistacho / Trufas de Reggianito y Nuez / Almendras</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -172,7 +172,7 @@
               <img src="../img/imgpicadas/picadatres.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">ORLEANS</h5>
-                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Lomo crudo español/ Salame colorado español/ Pinchos de crudo, provolone y tomatitos secos/ Quesitos exclusivos : Ajo y perejil, Trufas de reggianito y nuez, Terrine de queso con hierbas frescas/ Queso Brie/ Aceitunas negras maceradas </p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -184,7 +184,7 @@
               <img src="../img/imgpicadas/picadacuatro.png" class="card-img-top " alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">MOULINS</h5>
-                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Jamón crudo/ Lomito horneado con hierbas/ Pinchos de Lomo crudo y provolone/ Quesito exclusivo  con pimentón dulce/ Ajos dulces/ Higos rellenos con queso azul/ Queso raclette/ Olivas griegas</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -194,7 +194,7 @@
               <img src="../img/imgpicadas/picadacinco.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">ESTRASBURGO</h5>
-                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Prosciutto italiano/ Bondiola/ Lomito horneado con hierbas/ Chorizo colorado español/ Salame con hierbas/ Queso banquette suave de Tandil/ Pategrás/ Gruyere/ Quesitos exclusivos de a'Manger: Queso con jamón crudo, Queso con ajo y perejil fresco/ Sardo a la pimienta rosa/ Tomates secos en oliva/ Pinchos de lomo crudo, español y provolone/ Pinchos de boquerones, olivas con morron y tomates secos / Higos rellenos con Roquefort/ Olivas negras maceradas/ Hongos de pino en escabeche, Queso ahumado y Olivas verdes en aceite/ Cream cheese de ciboulette/ Frutos seco</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
@@ -204,7 +204,7 @@
               <img src="../img/imgpicadas/picadaseis.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">VERSALLES  </h5>
-                <p class="card-text"> <u class="me-2">Ingredientes:</u>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> <u class="me-2">Ingredientes:</u>Prosciutto italiano/ Pavita Ahumada/ Pastron casero/ Lever ahumado / Quesitos exclusivos de 'Manger : Trufas de fontina y pimienta rosa, Queso con alcaparras/ Pinchos de corazón de alcaucil con jamón crudo/Pinchos capresse de boconccinos , tomates secos y olivas negras/ Pinchos de jamón crudo, Roquefort y nueces/ Arenques marinados/ Cream cheese con ciboulette/ Pepinos agridulces/ Queso reggianito/ Queso Brie/ Queso raclette/ Olivas negras maceradas/ Frutos secos</p>
                 <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
               </div>
             </div>
