--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <img src="./img/imgpicadas/picadauno.png" class="card-img-top  " alt="...">
                                <div class="card-body bodyCards  ">
                                     <h5 class="card-title fw-bold bodyCards-box-shadow">PARÍS</h5>
-                                     <p class="card-text  bodyCards-box-shadow">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <p class="card-text  bodyCards-box-shadow"> <u class="me-2">Ingredientes:</u>Prosciutto Italiano 100g/ Paté de Salmón/ Vizcacha en Escabeche/ Corazón de Alcaucil/ Aceitunas con Almendras/ Salsa Brava/ Mostaza a la Miel/ Frambuesas al natural/ Mermelada de Arándanos. </p>
                                        <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
                                 </div>
                      </div>
@@ -168,7 +168,7 @@
                   <img src="./img/imgpicadas/picadados.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title fw-bold">LYON </h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text"> <u class="me-2">Ingredientes:</u>Quesito con Ajo y Perejil / Tomates Secos en Oliva / Berenjenas Grilladas / Ajíes con Roquefort / Olivas Negras Maceradas / Zanahorias Glaseadas / Ciruelas Rellenas con Pasas y Nueces / Champignones a la Italiana / Trufas de Gruyere y Pistacho / Trufas de Reggianito y Nuez / Almendras</p>
                     <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
                   </div>
                 </div>
@@ -178,7 +178,7 @@
                   <img src="./img/imgpicadas/picadatres.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title fw-bold">ORLEANS</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text"> <u class="me-2">Ingredientes:</u>Lomo crudo español/ Salame colorado español/ Pinchos de crudo, provolone y tomatitos secos/ Quesitos exclusivos : Ajo y perejil, Trufas de reggianito y nuez, Terrine de queso con hierbas frescas/ Queso Brie/ Aceitunas negras maceradas </p>
                     <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
                   </div>
                 </div>
@@ -188,7 +188,7 @@
                   <img src="./img/imgpicadas/picadacuatro.png" class="card-img-top " alt="...">
                   <div class="card-body">
                     <h5 class="card-title fw-bold">MOULINS</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text"> <u class="me-2">Ingredientes:</u>Jamón crudo/ Lomito horneado con hierbas/ Pinchos de Lomo crudo y provolone/ Quesito exclusivo  con pimentón dulce/ Ajos dulces/ Higos rellenos con queso azul/ Queso raclette/ Olivas griegas</p>
                     <a href="./contacto.html" class="botonComprarProductoPicadas">CONTACTAR</a>
                   </div>
                 </div>
